cloudformation_template.json
{
    "Description": "An Ec2-classic stack with Couchbase Server, Sync Gateway + load testing tools ",
    "Parameters": {
        "KeyName": {
            "Description": "Name of an existing EC2 KeyPair to enable SSH access",
            "Type": "String"
        }
    },
    "Resources": {
        "CouchbaseSecurityGroup": {
            "Properties": {
                "GroupDescription": "Allow access to Couchbase Server",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "8091",
                        "IpProtocol": "tcp",
                        "ToPort": "8091"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "4984",
                        "IpProtocol": "tcp",
                        "ToPort": "4984"
                    }
                ]
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "CouchbaseSecurityGroupIngress11210": {
            "Properties": {
                "FromPort": "11210",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "ToPort": "11210"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "CouchbaseSecurityGroupIngress11211": {
            "Properties": {
                "FromPort": "11211",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "ToPort": "11211"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "CouchbaseSecurityGroupIngress21100": {
            "Properties": {
                "FromPort": "21100",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "ToPort": "21299"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "CouchbaseSecurityGroupIngress4369": {
            "Properties": {
                "FromPort": "4369",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "ToPort": "4369"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "CouchbaseSecurityGroupIngress4985": {
            "Properties": {
                "FromPort": "4985",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "ToPort": "4985"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "CouchbaseSecurityGroupIngress5984": {
            "Properties": {
                "FromPort": "5984",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "ToPort": "5984"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "CouchbaseSecurityGroupIngress8092": {
            "Properties": {
                "FromPort": "8092",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "ToPort": "8092"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "CouchbaseSecurityGroupIngress9876": {
            "Properties": {
                "FromPort": "9876",
                "GroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupName": {
                    "Ref": "CouchbaseSecurityGroup"
                },
                "ToPort": "9876"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "couchbaseserver0": {
            "Properties": {
                "ImageId": "ami-403b4328",
                "InstanceType": "m1.large",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "couchbaseserver0"
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        },
        "couchbaseserver1": {
            "Properties": {
                "ImageId": "ami-403b4328",
                "InstanceType": "m1.large",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "couchbaseserver1"
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        },
        "couchbaseserver2": {
            "Properties": {
                "ImageId": "ami-403b4328",
                "InstanceType": "m1.large",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "couchbaseserver2"
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        },
        "gateload0": {
            "Properties": {
                "ImageId": "ami-96a818fe",
                "InstanceType": "m3.medium",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "gateload0"
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        },
        "gateload1": {
            "Properties": {
                "ImageId": "ami-96a818fe",
                "InstanceType": "m3.medium",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "gateload1"
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        },
        "gateload2": {
            "Properties": {
                "ImageId": "ami-96a818fe",
                "InstanceType": "m3.medium",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "gateload2"
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        },
        "syncgateway0": {
            "Properties": {
                "ImageId": "ami-96a818fe",
                "InstanceType": "m3.large",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "syncgateway0"
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        },
        "syncgateway1": {
            "Properties": {
                "ImageId": "ami-96a818fe",
                "InstanceType": "m3.large",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "syncgateway1"
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        },
        "syncgateway2": {
            "Properties": {
                "ImageId": "ami-96a818fe",
                "InstanceType": "m3.large",
                "KeyName": {
                    "Ref": "KeyName"
                },
                "SecurityGroups": [
                    {
                        "Ref": "CouchbaseSecurityGroup"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "syncgateway2"
                    }
                ]
            },
            "Type": "AWS::EC2::Instance"
        }
    }
}
